--- a/.env
+++ b/.env
@@ -4,4 +4,10 @@ DB_MAX_OPEN_CONNS=30
 DB_MAX_IDLE_CONNS=30
 DB_MAX_IDLE_TIME=15m
 
+SENDGRID_API_KEY=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
+FROM_EMAIL=eyeofchisduri@gmail.com
+
+BASIC_USERNAME=admin
+BASIC_PASSWORD=admin
+
 ENV_MODE=DEVELOPMENT
