--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 ADDR=:8080
-DB_ADDR=postgres://admin:adminpassword@localhost/social?sslmode=disable
+DB_ADDR=postgres://admin:adminpassword@localhost/bursary?sslmode=disable
 DB_MAX_OPEN_CONNS=30
 DB_MAX_IDLE_CONNS=30
 DB_MAX_IDLE_TIME=15m
 
-SENDGRID_API_KEY=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
-FROM_EMAIL=eyeofchisduri@gmail.com
+SENDGRID_API_KEY=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
+FROM_EMAIL=eyeofchiuri@gmail.com
 
 BASIC_USERNAME=admin
 BASIC_PASSWORD=admin
@@ -13,3 +13,9 @@ BASIC_PASSWORD=admin
 JWT_SECRET=ahgdasgdjgyj687yiuh23hyiuh2kjdsassadsad
 
 ENV_MODE=DEVELOPMENT
+
+MINIO_ENDPOINT="localhost:9000"
+MINIO_PORT= 9000
+MINIO_ACCESSKEY="aOrmxAmbm3Gtb0J0ZX4N"
+MINIO_SECRETKEY="5bLBDxNiY36kn7YqYmA1hU9LTIQsAWkr43xZPVap"
+MINIO_BUCKET="documents-students"
