--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ JWT_SECRET=ahgdasgdjgyj687yiuh23hyiuh2kjdsassadsad
 
 ENV_MODE=DEVELOPMENT
 
-MINIO_ENDPOINT="localhost:9000"
-MINIO_PORT= 9000
-MINIO_ACCESSKEY="aOrmxAmbm3Gtb0J0ZX4N"
-MINIO_SECRETKEY="5bLBDxNiY36kn7YqYmA1hU9LTIQsAWkr43xZPVap"
-MINIO_BUCKET="documents-students"
+# MINIO_ENDPOINT="localhost:9000"
+# MINIO_PORT= 9000
+# MINIO_ACCESSKEY="aOrmxAmbm3Gtb0J0ZX4N"
+# MINIO_SECRETKEY="5bLBDxNiY36kn7YqYmA1hU9LTIQsAWkr43xZPVap"
+# MINIO_BUCKET="documents-students"
