--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_MAX_OPEN_CONNS=30
 DB_MAX_IDLE_CONNS=30
 DB_MAX_IDLE_TIME=15m
 
-SENDGRID_API_KEY=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
+# SENDGRID_API_KEY=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
 FROM_EMAIL=eyeofchiuri@gmail.com
 
 BASIC_USERNAME=admin
