--- a/.env
+++ b/.env
@@ -1,6 +1,21 @@
 ADDR=:8080
-DB_ADDR=postgres://admin:adminpassword@localhost/bursary?sslmode=disable
+DB_ADDR=postgres://postgres:root@127.0.0.1/bursary?sslmode=disable
 DB_MAX_OPEN_CONNS=30
 DB_MAX_IDLE_CONNS=30
 DB_MAX_IDLE_TIME=15m
 
+SENDGRID_API_KEY=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
+FROM_EMAIL=eyeofchiuri@gmail.com
+
+BASIC_USERNAME=admin
+BASIC_PASSWORD=admin
+
+JWT_SECRET=ahgdasgdjgyj687yiuh23hyiuh2kjdsassadsad
+
+ENV_MODE=DEVELOPMENT
+
+MINIO_ENDPOINT="localhost:9000"
+MINIO_PORT= 9000
+MINIO_ACCESSKEY="fG4Q5tppcqkrfCmyxcZ3"
+MINIO_SECRETKEY="GIEouCsa2pswUGIlUOTG5iuVqr2LUPJ3qonJIn64"
+MINIO_BUCKET="documents-students"
