--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_MAX_OPEN_CONNS=30
 DB_MAX_IDLE_CONNS=30
 DB_MAX_IDLE_TIME=15m
 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 FROM_EMAIL=eyeofchiuri@gmail.com
 
 BASIC_USERNAME=admin
