Updates on displaying admin users

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_MAX_OPEN_CONNS=30
 DB_MAX_IDLE_CONNS=30
 DB_MAX_IDLE_TIME=15m
 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 FROM_EMAIL=eyeofchiuri@gmail.com
 
 BASIC_USERNAME=admin
